# CustomerChurnAnalyzer

./: app.py  pyproject.toml  requirements.txt
.streamlit/: config.toml  requirements.txt
attached_assets/: mission-mtn-customer.ipynb
pages/: 1_📊_Insights.py  2_📈_Visualizations.py  3_📋_Data_Dashboard.py  4_🤖_ML_Models.py  5_📋_Executive_Summary.py
utils/: data_processor.py  visualization_helpers.py
